Inbox merging (#368)
* Inbox merging #1

* Inbox merging #2

* Patching null signature

* Add merge hash

* Add fork feature

* Make unittest not fail

* Simplify setting parent

* Merge logic

* Add fork hash

* Finalize merging

* Fix tests

* Fix typo

* Fix Metadata hash verification

* Minor fixes

* Debugging statements

* Fix order of revisions

* Fix page name in DB

* Fix error reporting

* Fix syntax error

* Fix CI

* Fix order of metadata hash

* Allow moving pages without generating additional revisions

---------
