# includes/Transfer/TransferEntityFactory.php
@@ -201,6 +201,7 @@ class TransferEntityFactory {
 			'domain_id' => $entity->getDomainId(),
 			'time_stamp' => $entity->getTime()->format( 'YmdHis' ),
 			'previous_verification_hash' => $entity->getHash( VerificationEntity::PREVIOUS_VERIFICATION_HASH ),
+			VerificationEntity::MERGE_HASH => $entity->getHash( VerificationEntity::MERGE_HASH ),
 			'metadata_hash' => $entity->getHash( VerificationEntity::METADATA_HASH ),
 			'verification_hash' => $entity->getHash()
 		];
